istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-bare-bones
  labels:
    name: istio-bare-bones
