istio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seneca-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seneca
      version: v1
  template:
    metadata:
      labels:
        app: seneca
        version: v1
    spec:
      containers:
      - name: coffee
        image: webserver
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seneca-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seneca
      version: v2
  template:
    metadata:
      labels:
        app: seneca
        version: v2
    spec:
      containers:
      - name: route-2
        image: route-2
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
