istio/frontend-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-seneca
  labels: 
    app: svc-seneca
spec:
  selector:
      app: seneca
  ports:
  - name: http
    protocol: TCP
    port: 30080
    nodePort: 30080
    targetPort: 80
  type: NodePort
