istio/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-seneca
spec:
  selector:
    app: seneca
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
