istio/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: seneca-istio
spec:
  hosts:
    - svc-seneca.istio-bare-bones.svc.cluster.local
  http:
  - route:
    - destination:
        host: svc-seneca.istio-bare-bones.svc.cluster.local
        subset: v1
      weight: 0
    - destination:
        host: svc-seneca.istio-bare-bones.svc.cluster.local
        subset: v2
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld
spec:
  host: svc-seneca.istio-bare-bones.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
